added new stock count function
